# Bootcamp_aula08

./: README.md  data.csv  data.parquet  etl.py  pipeline.py  pyproject.toml
